# hello_world

./: README.md
hello_world_four/: Build.cmd  CMakeLists.txt  ReadMe.txt  camera.cpp  camera.hpp  ht_entry_point.cpp  iinput.hpp  input.cpp  input.hpp  r_cube.h  r_types.h  render.cpp  render.hpp  timer.cpp  timer.hpp
hello_world_one/: Build.bat  Debug.cpp  Debug.h  EP.cpp  Engine.cpp  Engine.h  Engine_msg.cpp  Lab.cpp  Makefil0  ReadMe.txt  Reader.cpp  Reader.h  Str.h
hello_world_three/: ReadMe.txt  hello_world.c
hello_world_two/: Application.cpp  Application.h  Application_linkage.cpp  CMakeLists.txt  CourseWork.rc  EP.cpp  Global.cpp  Global.h  MainMenu.cpp  MainMenu.h  MainWindow.cpp  MainWindow.h  MainWindow_About.cpp  MainWindow_About.h  ReadMe.txt  RenderDevice.cpp  RenderDevice.h  RenderWindow.cpp  RenderWindow.h  Window.cpp  Window.h  Window_WndProc.cpp
hello_world_two/ui/: MainMenu.ribbon
hello_world_two/xray/: xray.h  xray_compile.h  xray_core.h  xray_debug.h  xray_debug_common.h  xray_debug_macros.h  xray_math.h  xray_math_common.h  xray_math_matrix.h  xray_math_matrix_inline.h  xray_math_quaternion.h  xray_math_quaternion_inline.h  xray_math_random.h  xray_math_vector.h  xray_stl.h  xray_string.h  xray_sync.h  xray_types.h
xr_bld_env/: Build.cmd  ReadMe.txt
xr_bld_env/Game/: Run.cmd  fsgame.ltx  user.ltx
xr_bld_env/Game/Data/Cfg/: system.ltx
xr_bld_env/Src/: CMakeLists.txt
xr_bld_env/Src/cmake/: DirChk.py  utils.cmake  xray.cmake
xr_bld_env/Src/xrCDB/: CMakeLists.txt
xr_bld_env/Src/xrCore/: CMakeLists.txt
xr_bld_env/Src/xrLUA_JIT/: CMakeLists.txt
xr_bld_env/Src/xrNetServer/: CMakeLists.txt
xr_bld_env/Src/xrODE/: CMakeLists.txt
xr_bld_env/Src/xrParticles/: CMakeLists.txt
xr_bld_env/Src/xrSound/: CMakeLists.txt
xr_bld_env/Src/xrXMLParser/: CMakeLists.txt
xr_bld_env/Src/xr_3da/: CMakeLists.txt
xr_bld_env/Src/xr_3da/xrCPU_Pipe/: CMakeLists.txt
xr_bld_env/Src/xr_3da/xrGame/: CMakeLists.txt  CMakeLists_exclude.txt
xr_bld_env/Src/xr_3da/xrRender_R1/: CMakeLists.txt
